## PLUXML 5.1.7 (sortie : xx/xx/2012) ##

(+] Administration: lien Commentaires masqué si commentaires désactivés
[+] plxFeed: ajouts des hooks plxFeedRssArticlesXml, plxFeedRssCommentsXml, plxFeedAdminCommentsXml
[+] plxFeed: changement du nom des méthodes getAdminCommentaires, getRssCommentaires en getAdminComments et getRssComments
[+] Les fichiers de parametres des plugins sont désormais stockés dans le dossier de configuration de PluXml
[+] Administration: Paramètres > Plugins -> Ordre de chargement des plugins
[+] Administration: Paramètres > Configuration avancée -> Ajout du choix de l'emplacement des fichiers de configuration (dossier)
[-] Administration: Paramètres > Configuration avancée -> Suppression du choix de l'emplacement des fichiers .xml
BUG plxShow:pagination(): lien "première page" collé au lien "précédente"
BUG plxPlugins::getInfos(): mauvais test sur la récupération du site
BUG sitemap: mauvais format de date dans la balise lastmod
BUG plxShow::catName() : appel de la fonction carUrl au lieu de catUrl
BUG plxUtils::strCut : problème pour couper une chaine de caractère avec l'encodage UTF-8

## PLUXML 5.1.6 (sortie : 16/04/2012) ##

[+] Administration: Paramètres > Option d'affichage -> option pour afficher le nom des catégories même si elles ne contiennent pas d'article
[+] Administration: Page statiques > Options -> ajout champ pour définir le contenu de la balise <title>
[+] Administration: Catégories > Options -> ajout champ pour définir le contenu de la balise <title>
[+]	Administration: affichage compteur des articles en attente de validation à droite du menu "Articles"
[+]	Administration: compteur des commentaires hors ligne à droite du menu "commentaires" cliquable -> accès direct à la liste des commentaires hors ligne.
[+] Administration: Edition des commentaires -> possibilité de modifier la date/heure des commentaires
[+] Administration: Gestionnaire de médias: ajout du format ogg dans la liste des fichiers autorisés